--- a/package.json
+++ b/package.json
@@ -20,19 +20,18 @@
   "sideEffects": false,
   "exports": {
     ".": {
-      "import": "./dist/zenjson.es.js",
-      "require": "./dist/zenjson.cjs.js"
+      "import": "./dist/mod.mjs",
+      "require": "./dist/mod.js"
     }
   },
-  "main": "./dist/zenjson.cjs.js",
-  "module": "./dist/zenjson.es.js",
+  "main": "./dist/mod.js",
+  "module": "./dist/mod.mjs",
   "types": "./dist/mod.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && vite build && yarn build:types && denoify",
-    "build:types": "tsc -p ./tsconfig.build.json",
+    "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts && denoify",
     "codecov": "codecov",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
@@ -44,27 +43,29 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.12",
-    "@types/jest": "^27.0.1",
-    "@typescript-eslint/eslint-plugin": "^4.31.1",
-    "@typescript-eslint/parser": "^4.31.1",
+    "@types/fs-extra": "^9.0.13",
+    "@types/jest": "^27.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.10.0",
+    "@typescript-eslint/parser": "^5.10.0",
     "codecov": "^3.8.3",
-    "denoify": "^0.9.1",
-    "eslint": "^7.32.0",
+    "denoify": "^0.10.6",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
     "fs-extra": "^10.0.0",
-    "jest": "^27.2.0",
+    "jest": "^27.4.7",
     "jest-ts-tsx-resolver": "^1.0.0",
-    "np": "^7.5.0",
-    "prettier": "^2.4.1",
+    "np": "^7.6.0",
+    "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^27.0.4",
+    "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3",
-    "vite": "^2.5.8"
+    "typescript": "^4.5.4"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "dependencies": {
+    "tsup": "^5.11.11"
   }
 }
