--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts && denoify",
+    "build": "rimraf dist deno_dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts && denoify",
     "codecov": "codecov",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
@@ -59,13 +59,11 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^27.1.3",
     "tslib": "^2.3.1",
+    "tsup": "^5.11.11",
     "typescript": "^4.5.4"
   },
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
-  },
-  "dependencies": {
-    "tsup": "^5.11.11"
   }
 }
