--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "exports": {
     ".": {
       "import": "./dist/mod.mjs",
-      "require": "./dist/mod.js"
+      "require": "./dist/mod.js",
+      "types": "./dist/mod.d.ts"
     }
   },
   "main": "./dist/mod.js",
@@ -31,39 +32,51 @@
     "dist"
   ],
   "scripts": {
-    "build": "rimraf dist deno_dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts && denoify",
-    "codecov": "codecov",
+    "build": "rimraf dist && tsup --format cjs,esm src/mod.ts --dts src/mod.ts",
+    "build:deno": "rimraf deno_dist && denoify",
     "lint": "prettier . --check && eslint . && tsc --noEmit",
     "lint:fix": "prettier . --write . && eslint . --fix",
-    "release": "yarn build && np",
-    "test": "yarn lint && jest --coverage",
-    "test:run": "jest",
-    "test:watch": "jest --watch",
-    "test:watch-cov": "jest --watch --coverage",
-    "typecheck": "tsc --noEmit"
+    "release": "release-it",
+    "test": "pnpm run lint && vitest run --coverage",
+    "test:run": "vitest run",
+    "test:watch": "vitest --watch",
+    "typecheck": "tsc",
+    "typecheck:watch": "tsc --watch"
   },
   "devDependencies": {
-    "@types/fs-extra": "^9.0.13",
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
-    "codecov": "^3.8.3",
-    "denoify": "^0.10.6",
-    "eslint": "^8.7.0",
-    "eslint-config-prettier": "^8.3.0",
-    "fs-extra": "^10.0.0",
-    "jest": "^27.4.7",
-    "jest-ts-tsx-resolver": "^1.0.0",
-    "np": "^7.6.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
-    "ts-jest": "^27.1.3",
-    "tslib": "^2.3.1",
-    "tsup": "^5.11.11",
-    "typescript": "^4.5.4"
+    "@types/node": "^20.3.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "@typescript-eslint/parser": "^5.59.9",
+    "@vitest/coverage-v8": "^0.32.0",
+    "denoify": "^1.5.8",
+    "eslint": "^8.42.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8",
+    "release-it": "^15.11.0",
+    "rimraf": "^5.0.1",
+    "tslib": "^2.5.3",
+    "tsup": "^6.7.0",
+    "typescript": "^5.1.3",
+    "vitest": "^0.32.0"
   },
+  "packageManager": "pnpm@8.6.1",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org"
+  },
+  "release-it": {
+    "hooks": {
+      "before:init": [
+        "pnpm test",
+        "pnpm run build:deno"
+      ]
+    },
+    "npm": {
+      "publish": true
+    },
+    "github": {
+      "release": true,
+      "web": true
+    }
   }
 }
